syntax = "proto3";

package grpc;

service Touchpad {
  rpc Move (MoveRequest) returns (MoveReply) {}
}

message MoveRequest {
  repeated MoveEvent move_events = 1;
}

message MoveReply {}

message MoveEvent {
  int32 pointer_id = 1;
  int32 position_x = 2;
  int32 position_y = 3;
  int32 pressure = 4;
}

